完成api基本接口开发

--- a/app.json
+++ b/app.json
@@ -11,5 +11,8 @@
     },
     "auth": {
         "key": "uZXUa9ssSS5nr1lWvjTSwYhVxBxNsAyj"
+    },
+    "route": {
+        "deeplink": "zodream"
     }
 }
